--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -93,7 +93,17 @@
             <p>or <span>LOG IN</span> with </p>
         </div> -->
     </section>
-    <section class="last">
-        <div></div>
-    </section>
+
+    <div class="" style="background-color: #fff;">
+        <div class="footer_social">
+            <div>
+                <p>&copy; 2021 OLIVE</p>
+            </div>
+            <div class="social_icon">
+                <img src="/assest/OLIVE/fb.png" />
+                <img src="/assest/OLIVE/instagram.png" />
+                <img src="/assest/OLIVE/twitter.png" />
+            </div>
+        </div>
+    </div>
     <%- include("./partials/footer.ejs") %>
