--- a/views/provider/auditions.ejs
+++ b/views/provider/auditions.ejs
@@ -101,7 +101,7 @@
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="/provide/dashboard">Olive Logo</a>
+                <a class="navbar-brand" href="/provider/dashboard">Olive Logo</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -120,25 +120,32 @@
                             <li class="body">
                                 <ul class="menu">
                                     <li>
-                                        <a href="/provider/profile">
-                                            <div class="icon-circle bg-light-green">
-                                                <i class="material-icons">account_circle</i>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h4>View Profile </h4>
-
-                                            </div>
+                                        <a href="/provider/dashboard">
+                                            <i class="material-icons">home</i>
+                                            <span>Home</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="/provider/logout">
-                                            <div class="icon-circle bg-cyan">
-                                                <i class="material-icons">input</i>
-                                            </div>
-                                            <div class="menu-info">
-                                                <h4>logout</h4>
-
-                                            </div>
+                                        <a href="/provider/createaudition">
+                                            <i class="material-icons">input</i>
+                                            <span>Create Audition</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/provider/auditions">
+                                            <i class="material-icons">mic</i><span>View Auditions</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/provider/profile">
+                                            <i class="material-icons">settings</i>
+                                            <span>Profile</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../../../pages/helper-classes.html">
+                                            <i class="material-icons">layers</i>
+                                            <span>Helper Classes</span>
                                         </a>
                                     </li>
                                     <!-- <li>
@@ -341,22 +348,34 @@
             <div class="menu">
                 <ul class="list">
                     <li class="header">MAIN NAVIGATION</li>
-                    <li class="active">
+                    <li class="active"></li>
+                    <li>
                         <a href="/provider/dashboard">
                             <i class="material-icons">home</i>
-                            <span>Dashboard</span>
+                            <span>Home</span>
                         </a>
                     </li>
                     <li>
                         <a href="/provider/createaudition">
-                            <i class="material-icons">text_fields</i>
+                            <i class="material-icons">input</i>
                             <span>Create Audition</span>
                         </a>
                     </li>
                     <li>
                         <a href="/provider/auditions">
+                            <i class="material-icons">mic</i><span>View Auditions</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/provider/profile">
+                            <i class="material-icons">settings</i>
+                            <span>Profile</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../../../pages/helper-classes.html">
                             <i class="material-icons">layers</i>
-                            <span>View Auditions</span>
+                            <span>Helper Classes</span>
                         </a>
                     </li>
 
