--- a/views/provider/signup.ejs
+++ b/views/provider/signup.ejs
@@ -132,6 +132,7 @@
                         signupBtn.innerHTML = 'Created';
                         window.location.href = "/provider";
                     } else {
+                        alert("Provider already exist")
                         signupBtn.innerHTML = 'Error Creating Provider';
                         window.location.href = "/provider/signup";
 
