--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -467,7 +467,7 @@ border-radius: 10px;
     background-color: #000;
 }
 .last{
-    margin-top: 50px;
+ 
 
     background-color: #801315;
     height: 4px;
@@ -561,4 +561,19 @@ gap: 20px;
     bottom: 0px;
     margin-top: 600px;
     
+}
+.footer_social{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:  #801315;
+    color: #fff;
+    padding: 5px;
+    font-weight: 300;
+}
+.social_icon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
 }
