--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -56,11 +56,15 @@
             </form>
         </div>
 
+        <section style="background-color: #fff;">
+            <h4 style="text-align: center;"> <a style="color: #801315;" href="/logout">logout</a></h4>
+            <br>
 
+        </section>
         <div class="" style="background-color: #fff;">
             <div class="footer_social">
                 <div>
-                    <p>&copy; 2021 OLIVE</p>
+                    <p>&copy; 2020 OLIVE</p>
                 </div>
                 <div class="social_icon">
                     <img src="/assest/OLIVE/fb.png" />
