--- a/views/provider/createaudition.ejs
+++ b/views/provider/createaudition.ejs
@@ -72,7 +72,7 @@
                                     <h5>Choose Audition Charges</h5>
                                     <select class="form-select" aria-label="Default select example"
                                         name="auditionCharges">
-                                        <option value="0">Free</option>
+                                        <option selected value="0">Free</option>
                                         <option value="1">Payment</option>
                                     </select>
                                 </div>
